# ChromaDB.NET

./: .gitignore  Cargo.toml  ChromaDB.NET.Core.sln  ChromaDB.NET.csproj  ChromaDB.NET.sln  ChromaDB.cs  README.md  build.ps1  build.sh  chroma_api.h
.github/workflows/: build-nuget.yaml
ChromaDB.NET/: ChromaClient.cs  ChromaDB.NET.csproj  ChromaException.cs  Collection.cs  IEmbeddingFunction.cs  NativeMethods.cs  QueryResult.cs  WhereFilter.cs  WhereFilterConverter.cs
ChromaDB.NET/Properties/: AssemblyInfo.cs
Examples/BasicExample/: BasicExample.csproj  Program.cs
Tests/: README.md
Tests/ChromaDB.NET.Tests/: AdditionalCoverageTests.cs  ChromaClientTestExtensions.cs  ChromaClientTests.cs  ChromaDB.NET.Tests.csproj  DatabaseOperationsTests.cs  DisposeSafetyTests.cs  EmbeddingsTests.cs  IdiomsApiTests.cs  IntegrationTests.cs  MetadataConverterTests.cs  NativeLibTests.cs  WhereFilterTests.cs
Tests/NuGetSmokeTest/: NuGetSmokeTest.csproj  Program.cs
src/: ChromaDB.NET.csproj  ChromaDB.cs  lib.rs  mod.rs
src/ChromaDB.NET/: ChromaClient.cs  ChromaDB.cs  ChromaDocument.cs  ChromaErrorCodes.cs  ChromaErrorInfo.cs  ChromaErrorNative.cs  MetadataConverter.cs  NativeMethods.cs  WhereFilter.cs  WhereFilterConverter.cs
src/client/: mod.rs
src/collection/: management.rs  mod.rs  operations.rs  types.rs
src/error/: mod.rs
src/types/: mod.rs
src/utils/: mod.rs
