[package]
name = "chromadb_dotnet_bindings"
version = "0.1.0"
edition = "2021"
description = "C# bindings for ChromaDB"
license = "Apache-2.0"

[lib]
name = "chroma_csharp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
chroma-frontend = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-frontend" }
chroma-cache = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-cache" }
chroma-config = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-config" }
chroma-log = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-log" }
chroma-segment = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-segment" }
chroma-sqlite = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-sqlite" }
chroma-sysdb = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-sysdb" }
chroma-system = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-system" }
chroma-types = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-types" }
chroma-error = { git = "https://github.com/chroma-core/chroma.git", branch = "main", package = "chroma-error" }

# FFI dependencies
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# For error handling
thiserror = "1.0"
anyhow = "1.0"

# For FFI string conversions
cstr = "0.2.11"

[profile.release]
lto = true          # Link-Time Optimization
codegen-units = 1   # Maximize optimization opportunities
strip = true        # Strip symbols
opt-level = 'z'     # Optimize for size
panic = 'abort'     # Abort on panic for smaller binary