[package]
name = "chromadb-dotnet-bindings"
version = "0.2.0"
edition = "2021"
description = "Native Bindings for ChromaDB.NET"
license = "Apache-2.0"

[lib]
name = "chroma_csharp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
chroma-frontend = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-frontend" }
chroma-cache = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-cache" }
chroma-config = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-config" }
chroma-log = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-log" }
chroma-segment = { git = "https://github.com/chroma-core/chroma.git",  tag = "1.0.15", package = "chroma-segment" }
chroma-sqlite = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-sqlite" }
chroma-sysdb = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-sysdb" }
chroma-system = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-system" }
chroma-types = { git = "https://github.com/chroma-core/chroma.git", tag = "1.0.15", package = "chroma-types" }
chroma-error = { git = "https://github.com/chroma-core/chroma.git",  tag = "1.0.15", package = "chroma-error" }
syn = "2.0.104"

# FFI dependencies
libc = "0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41", features = ["full", "fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# For error handling
thiserror = "1.0.69"
anyhow = "1.0"

# For FFI string conversions 
cstr = "0.2.11"

[profile.release]
lto = true          # Link-Time Optimization
codegen-units = 1   # Maximize optimization opportunities
strip = true        # Strip symbols
opt-level = 'z'     # Optimize for size
panic = 'abort'     # Abort on panic for smaller binary